# restaurantos-ai

./: .gitignore  PLAN.md  README.md
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: ai.rs  api_public.rs  audit.rs  backup.rs  commands.rs  commerce.rs  db.rs  hub.rs  lib.rs  plugins.rs  reports.rs  seed.rs  sync.rs
app/src-tauri/tests/: hub_test.rs
app/src/domain/: catalog.ts  ids.ts  menu.ts  money.ts  order.test.ts  order.ts
app/src/ui/: App.tsx
docs/: arquitectura-tecnica.md  estrategia-pruebas-despliegue-mantenimiento.md  modelo-dominio.md  permisos-plugins.md  riesgos-backlog.md  vision-producto.md
docs/ai/: tools-conversacional-restaurante.md
docs/db/: README.md  schema-overview-restaurante.md
docs/db/migrations/: 0001_meta_sync_audit.sql  0002_org_auth.sql  0003_tax_catalog.sql  0004_inventory.sql  0005_parties.sql  0006_sales.sql  0007_purchases_cash.sql  0008_promotions_settings.sql  0009_ai_vector_fts.sql  0010_triggers.sql  0011_reporting_views.sql  0015_cfdi.sql  (+8 more)
docs/spikes/: spike-1-multiterminal.md  spike-2-escpos.md  spike-3-cfdi.md  spike-4-ollama-bench.md  spike-5-hub-rust.md
docs/ux/: design-system-extension.md  flujos-casos-uso.md
spikes/cfdi/: client.mjs  test.mjs
spikes/escpos/: encoder.mjs  simulator.mjs  test.mjs  tickets.mjs
spikes/multiterminal/: hub.mjs  package-lock.json  package.json  test.mjs
spikes/ollama-bench/: bench-vision.mjs  bench.mjs
(+53 files in other folders)
