[package]
name = "app"
version = "0.1.0"
description = "RestaurantOS AI — hub Tauri (UI de caja + servidor LAN multi-terminal)"
authors = ["Kiosa7"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

# Hub multi-terminal LAN (spike 1, decisión autónoma: Rust/axum embebido,
# ver docs/spikes/spike-1-multiterminal.md)
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
uuid = { version = "1", features = ["v4", "v7"] }
rand = "0.8"
futures = "0.3"

# Persistencia del hub (Fase 6 §10.1): SQLite embebido, mismas migraciones
# que docs/db/migrations/ (fuente de verdad del esquema, compartida con Node).
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
sha2 = "0.10"

[dev-dependencies]
tokio-tungstenite = "0.24"
